--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,17 +1,8 @@
-name: Metrics
-on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
-  workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
-jobs:
-  github-metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
+name: GitHub Discussions
+uses: lowlighter/metrics@latest
+with:
+  filename: metrics.plugin.discussions.svg
+  token: ${{ secrets.METRICS_TOKEN }}
+  base: ""
+  plugin_discussions: yes
+  plugin_discussions_categories_limit: 8
