--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
-name: GitHub Discussions
+name: Detailed display
 uses: lowlighter/metrics@latest
 with:
-  filename: metrics.plugin.discussions.svg
+  filename: metrics.plugin.achievements.svg
   token: ${{ secrets.METRICS_TOKEN }}
   base: ""
-  plugin_discussions: yes
-  plugin_discussions_categories_limit: 8
+  plugin_achievements: yes
+  plugin_achievements_only: sponsor, maintainer, octonaut
