--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,12 @@
-name: Half-year calendar
+name: Example
 uses: lowlighter/metrics@latest
 with:
-  filename: metrics.plugin.isocalendar.svg
-  token: ${{ secrets.METRICS_TOKEN }}
-  base: ""
-  plugin_isocalendar: yes
+  template: repository
+  filename: metrics.repository.svg
+  token: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
+  user: lowlighter
+  repo: metrics
+  plugin_lines: yes
+  plugin_followup: yes
+  plugin_projects: yes
+  plugin_projects_repositories: lowlighter/metrics/projects/1
