--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,12 +1,7 @@
 name: Example
 uses: lowlighter/metrics@latest
 with:
-  template: repository
-  filename: metrics.repository.svg
-  token: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
-  user: lowlighter
-  repo: metrics
+  filename: metrics.classic.svg
+  token: ${{ secrets.METRICS_TOKEN }}
+  base: header, repositories
   plugin_lines: yes
-  plugin_followup: yes
-  plugin_projects: yes
-  plugin_projects_repositories: lowlighter/metrics/projects/1
