--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,10 +12,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      uses: lowlighter/metrics@latest
-with:
-  filename: metrics.classic.svg
-  token: ${{ secrets.METRICS_TOKEN }}
-  base: header, repositories
-  plugin_lines: yes
-
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
